--- a/portfolio/src/app/project-card/project-card.component.scss
+++ b/portfolio/src/app/project-card/project-card.component.scss
@@ -1,14 +1,10 @@
-.card-image{
-    max-width: 5%;
-}
-
 mat-card-content{
   margin-top: 1vw;
 }
 
 mat-card{
   //margin: 2.5% auto 2.5% auto;
-  width: 100%;
+  //width: 100%;
   //background-color: beige;
 }
 
